<resources>
    <string name="app_name">Book-Keeper</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="guest_login_button">Continue as Guest</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="signup_textview">Sign Up</string>
    <string name="confirm_password_hint">Confirm Password*</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_no_hint">Mobile Number</string>
    <string name="bmi_add">Add</string>
    <string name="bmi_exp_browse">Browse</string>
    <string name="bmi_budget">Budget</string>
    <string name="bmi_shopping_list">List</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="bmi_account">Account</string>
    <string name="login_by_prompt">Login using</string>
    <string name="login_method_selection_prompt">Select login method:</string>
    <string name="quit_sign_up_prompt">Cancel sign up?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_email_error">Invalid email address!</string>
    <string name="invalid_password_error">Password can\'t be blank</string>
    <string name="password_mismatch_error">Passwords don\'t match!</string>
    <string name="invalid_mobile_number_error">Invalid mobile number</string>
    <string name="launch_sign_up_prompt">Sign up with current data?</string>
    <string name="load_sign_up_prompt">Launch Sign up?</string>
    <string name="sign_up_success_mesage">Sign up success! A validation email has been sent to you. Please verify you email address.</string>
    <string name="invalid_credentials_message">Invalid email or password!</string>
    <string name="log_out_prompt">Log out?</string>
    <string name="log_out">Log-Out</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="reset_password_hint">Reset Password?</string>
    <string name="password_reset_email_sent">Password reset link emailed. Please check.</string>
    <string name="login_benefits_text_title">Features unlocked on login:</string>
    <string name="login_benefits_text">
        1) Cloud back-up of all data.\n
        2) Sharing shopping list with connected users.\n
        3) Offline data import.
    </string>
    <string name="send_login_code_button">Send Verification Code</string>
    <string name="resend_login_code_button">Resend Code in %1$s secs</string>
    <string name="resend_code_button">Resend Code</string>
    <string name="login_code_send_failure">Code sending failed!</string>
    <string name="verification_code_hint">Verification Code</string>
    <string name="verify_code_button">Verify</string>
    <string name="login_prompt">Login with current data?</string>
    <string name="send_login_code_prompt">Send login code?</string>
    <string name="empty_verification_code_error">Empty verification code!</string>
    <string name="invalid_verification_code_message">Invalid verification code!</string>
    <string name="login_code_resend">Login code sent.</string>
    <string name="never_show_cb_text">Don\'t show again</string>
    <string name="add_expense_title">Add Expense Entry</string>
    <string name="edit_expense_title">Edit Expense Entry</string>
    <string name="total_expense_hint">Total expense amount</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="entry_time_text">Expense Time:</string>
    <string name="quantity_hint">Quantity*</string>
    <string name="uom_selector_prompt">Unit</string>
    <string name="unit_cost_text">Unit price:</string>
    <string name="description_hint">Expense details*</string>
    <string name="save_text">Save</string>
    <string name="category_selector_prompt">Category</string>
    <string name="category_hint">New category name</string>
    <string name="product_name_hint">Purchased Product name*</string>
    <string name="category_title_text">Category:</string>
    <string name="total_expense_error_message">Total expense can\'t be empty or zero</string>
    <string name="quantity_error_message">Quantity can\'t be empty or zero!</string>
    <string name="description_error_message">Description can\'t be blank</string>
    <string name="expense_saved_message">Expense entry saved.</string>
    <string name="cal_sign_text" translatable="false">+/-</string>
    <string name="cal_zero_text" translatable="false">0</string>
    <string name="cal_dot_text" translatable="false">.</string>
    <string name="cal_equal_text" translatable="false">=</string>
    <string name="cal_one_text" translatable="false">1</string>
    <string name="cal_two_text" translatable="false">2</string>
    <string name="cal_three_text" translatable="false">3</string>
    <string name="cal_plus_text" translatable="false">+</string>
    <string name="cal_four_text" translatable="false">4</string>
    <string name="cal_five_text" translatable="false">5</string>
    <string name="cal_six_text" translatable="false">6</string>
    <string name="cal_minus_text" translatable="false">-</string>
    <string name="cal_seven_text" translatable="false">7</string>
    <string name="cal_eight_text" translatable="false">8</string>
    <string name="cal_nine_text" translatable="false">9</string>
    <string name="cal_mul_text" translatable="false">x</string>
    <string name="cal_inv_text" translatable="false">1/x</string>
    <string name="cal_square_text" translatable="false">x*x</string>
    <string name="cal_div_text" translatable="false">÷</string>
    <string name="cal_percent_text" translatable="false">%</string>
    <string name="cal_ce_text" translatable="false">CE</string>
    <string name="cal_c_text" translatable="false">C</string>
    <string name="cal_mem_minus_text" translatable="false">M-</string>
    <string name="cal_mem_plus_text" translatable="false">M+</string>
    <string name="cal_mem_recall_text" translatable="false">MR</string>
    <string name="cal_mem_clear_text" translatable="false">MC</string>
    <string name="calculator_title">Calculator</string>
    <string name="calc_history_string" translatable="false">%1$s %2$s %3$s</string>
    <string name="calc_history_result" translatable="false">%1$s</string>
    <string name="double_2_dec_point" translatable="false">%1$.2f</string>
    <string name="exp_qty_text" translatable="false">%1$d %2$s</string>
    <string name="month_title_format" translatable="false">MMM yyyy</string>
    <string name="default_qty" translatable="false">1.0</string>
    <string name="default_unit_price" translatable="false">0.0</string>
    <string name="exp_entry_time_format" translatable="false">dd MMM yyyy hh:mm a</string>
    <string name="exp_entry_time_format_secs" translatable="false">dd MMM yyyy hh:mm:ss a</string>
    <string name="default_tax_vat" translatable="false">0.0</string>
    <string name="date_title_format" translatable="false">EEE dd MMM yyyy</string>
    <string name="reminder_hint" translatable="false">0</string>
    <string name="sl_count_down_text" translatable="false">%1$d %2$s</string>
    <string name="sl_remind_interval_text" translatable="false">%1$s</string>
    <string name="sli_price_range" translatable="false">%1$s - %2$s</string>
    <string name="sl_price_range" translatable="false">%1$s - %2$s</string>
    <string name="sli_qty_text" translatable="false">%1$s %2$s</string>
    <string name="email_share_app_subject" translatable="false">Sharing BookKeeper android app</string>
    <string name="delete_calc_history_prompt">Clear calculator history?</string>
    <string name="delete_calc_history_message">Calculator history cleared!</string>
    <string name="all_text">All</string>
    <string name="sort_by_date_text">By Date</string>
    <string name="chip_sort_by_week_text">By Week</string>
    <string name="chip_sort_by_month_text">By Month</string>
    <string name="exp_amount_title_text">Amount:</string>
    <string name="qty_prompt">Quantity:</string>
    <string name="exp_desc_title_text">Details:</string>
    <string name="exp_cat_title_text">Category:</string>
    <string name="login_launcher_text">Login to use feature</string>
    <string name="why_login_text">This is a personalized feature, hence login is required.</string>
    <string name="brand_name_hint">Brand name</string>
    <string name="unit_price_hint">Unit price*</string>
    <string name="add_exp_item">Add Product</string>
    <string name="set_expense_manually">Set manually</string>
    <string name="exp_item_brand_name_text">Brand:</string>
    <string name="product_name_empty_error">Product name can\'t be empty!</string>
    <string name="unit_price_empty_error">Unit price can\'t be empty or zero!</string>
    <string name="quantity_empty_error">Quantity can\'t be empty or zero!</string>
    <string name="edit">Edit</string>
    <string name="remove_text">Remove</string>
    <string name="delete">Delete</string>
    <string name="entry_time_title_text">Time:</string>
    <string name="save_exp_entry_prompt">Save expense entry?</string>
    <string name="total_price_title">Total price</string>
    <string name="vat_ait_hint">Tax/VAT(%)</string>
    <string name="tax_vat_error">Tax/Vat can\'t be negative!</string>
    <string name="search_text_hint">Search by portion of details text</string>
    <string name="confirm_delete_prompt">Confirm deletion?</string>
    <string name="delete_confirmaion_message">Entry deleted!</string>
    <string name="exp_browse_page_title">Browse Expenses</string>
    <string name="exp_count_prompt_text">Expense Count:</string>
    <string name="total_expense_title">Total Expense:</string>
    <string name="chip_dsc_date_text">↓Date</string>
    <string name="chip_asc_date_text">↑Date</string>
    <string name="chip_dsc_exp_text">↓Expense</string>
    <string name="chip_asc_exp_text">↑Expense</string>
    <string name="discard_and_exit_prompt">Exit without saving data?</string>
    <string name="view_expense_title">Expense details</string>
    <string name="entry_time_prompt">Time:</string>
    <string name="details_prompt">Details:</string>
    <string name="expense_items_prompt">Purchased Products:</string>
    <string name="total_expense_view_hint">Total expense:</string>
    <string name="vat_ait_view_txt">Tax/VAT(%):</string>
    <string name="invalid_first_name">First name is required!</string>
    <string name="add_shopping_list">Add New Shopping List</string>
    <string name="exp_range_title_text">Expense Range:</string>
    <string name="sl_item_count_title_text">Item count:</string>
    <string name="sl_deadline_title_text">Deadline:</string>
    <string name="sl_title_prompt_text">Title:</string>
    <string name="shopping_list_name">New list name</string>
    <string name="duplicate_shopping_list_name">Duplicate shopping list name!</string>
    <string name="empty_shopping_list_name_message">Shopping list name can\'t be empty!</string>
    <string name="retry">Retry</string>
    <string name="shopping_list_name_hint">Shopping list name</string>
    <string name="sl_deadline">Deadline:</string>
    <string name="enable_shopping_remainder">Enable reminder</string>
    <string name="sl_count_down_prompt">"Remind before: "</string>
    <string name="sl_reminder_interval_prompt">Remind every:</string>
    <string name="click_to_set_prompt">Click to set</string>
    <string name="edit_title">Edit | %1$s</string>
    <string name="hours_text">minutes.</string>
    <string name="disable_sl_reminder_prompt">Disable reminder?</string>
    <string name="guest_data_import_prompt">Expense entry(s) found saved by guest user. Do you want to import those into your accout?</string>
    <string name="delete_guest_exp_entry">Delete Entries</string>
    <string name="bmi_notepad">Notepad</string>
</resources>