<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 das.bikash.dev@gmail.com. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bmi_add"
        android:icon="@drawable/ic_add_exp"
        android:title="@string/bmi_add"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/bmi_exp_browse"
        android:icon="@drawable/ic_browse"
        android:title="@string/bmi_exp_browse"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bmi_shopping_list"
        android:icon="@drawable/ic_shopping_list"
        android:title="@string/bmi_shopping_list"
        app:showAsAction="ifRoom" />
    <!--<item
        android:id="@+id/bmi_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/bmi_budget"
        app:showAsAction="ifRoom"
        android:visible="false"/>-->
    <item
        android:id="@+id/bmi_note_pad"
        android:icon="@drawable/ic_notepad"
        android:title="@string/bmi_notepad"
        app:showAsAction="ifRoom"
        android:visible="true"/>
    <item
        android:id="@+id/bmi_account"
        android:icon="@drawable/ic_account"
        android:title="@string/bmi_account"
        app:showAsAction="ifRoom"
        android:visible="true"/>

</menu>