<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android_ex="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="4dp"
        android:background="@color/snow_white3"
        android:id="@+id/title_holder">
        <com.dasbikash.android_view_utils.custom_views.ClickableImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_menu"
            android:id="@+id/btn_menu"/>
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_title"
            android:textSize="32sp"
            android:layout_marginStart="8dp"/>
        <com.dasbikash.android_view_utils.custom_views.ClickableImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_history"
            android:id="@+id/btn_history"
            android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title_holder"
        app:layout_constraintBottom_toTopOf="@+id/input_block_holder"
        android:background="@color/snow_white2">

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/input_block_holder">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_mem_clear"
                android:text="@string/cal_mem_clear_text"
                style="@style/calc_mem_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_mem_recall"
                android:text="@string/cal_mem_recall_text"
                style="@style/calc_mem_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_mem_plus"
                android:text="@string/cal_mem_plus_text"
                style="@style/calc_mem_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_mem_minus"
                android:text="@string/cal_mem_minus_text"
                style="@style/calc_mem_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_percent"
                android:text="@string/cal_percent_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_ce_action"
                android:text="@string/cal_ce_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_c_action"
                android:text="@string/cal_c_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableImageView
                android:id="@+id/tv_bs_sign"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_bs_sign"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_inv"
                android:text="@string/cal_inv_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableImageView
                android:id="@+id/tv_square"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android_ex:isHtml="true"
                android:layout_weight="1"
                android:src="@drawable/ic_square_sign"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableImageView
                android:id="@+id/tv_root"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_root_sign"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_div_sign"
                android:text="@string/cal_div_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_seven"
                android:text="@string/cal_seven_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_eight"
                android:text="@string/cal_eight_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_nine"
                android:text="@string/cal_nine_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_mul_sign"
                android:text="@string/cal_mul_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_four"
                android:text="@string/cal_four_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_five"
                android:text="@string/cal_five_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_six"
                android:text="@string/cal_six_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_minus_sign"
                android:text="@string/cal_minus_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_one"
                android:text="@string/cal_one_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_two"
                android:text="@string/cal_two_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_three"
                android:text="@string/cal_three_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_plus_sign"
                android:text="@string/cal_plus_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_sign"
                android:text="@string/cal_sign_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_zero"
                android:text="@string/cal_zero_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_dot"
                android:text="@string/cal_dot_text"
                style="@style/calc_input_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <com.dasbikash.android_view_utils.custom_views.ClickableTextView
                android:id="@+id/tv_equal_sign"
                android:text="@string/cal_equal_text"
                style="@style/calc_action_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>