<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/login_benefits_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_details"
        android:text="@string/login_benefits_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="32dp"
        android:textColor="@android:color/black"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_hide_login_benefits"
        android:layout_marginTop="8dp"
        android:text="@string/never_show_cb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.appcompat.widget.LinearLayoutCompat>