<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.login.FragmentCodeVerify"
    android:background="@color/snow_white">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="40dp"
        app:layout_goneMarginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/et_verification_holder"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/verification_code_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:minHeight="40dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toBottomOf="@+id/et_verification_holder"
        app:layout_constraintStart_toEndOf="@+id/et_verification_holder"
        android:id="@+id/btn_verify_code"
        style="@style/login_buttons"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_code_button" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@+id/btn_verify_code"
        android:layout_marginTop="16dp"
        android:id="@+id/btn_send_code"
        style="@style/login_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_login_code_button" />
</androidx.constraintlayout.widget.ConstraintLayout>